--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
     <script src='https://cdn.tailwindcss.com'></script>
 
     <style>
-        /* 🎨 DESIGN - Apka pasandida layout */
+        /* 🎨 DESIGN - Apka pasandida layout (Bilkuk Same) */
         body { font-family: 'Poppins', 'Noto Sans Devanagari', sans-serif; background: #f0f4f8; margin: 0; padding: 0; display: flex; flex-direction: column; min-height: 100vh; }
         .main-wrapper { flex: 1; }
 
@@ -98,18 +98,28 @@
         import { collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const loader = document.getElementById('loading-screen');
+        const ADMIN_EMAIL = "mdayubjanz@gmail.com"; // 👑 BOSS EMAIL
 
-        // 1. LOGIN CHECK
+        // 1. LOGIN & SECURITY CHECK
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 // User Login Hai
-                console.log("User:", user.email);
+                console.log("Logged In:", user.email);
+
+                // 👇 AGAR ADMIN HAI -> TO SEEDHA ADMIN PANEL BHEJO
+                if(user.email === ADMIN_EMAIL) {
+                   // alert("Welcome Admin! Redirecting to Control Panel...");
+                    window.location.href = "admin.html";
+                    return; // Aage ka code mat chalao
+                }
+
+                // Agar Student hai -> To Dashboard dikhao
                 if(user.displayName) {
                     document.getElementById('user-name').innerText = user.displayName;
                 }
-                loadTests(); // Tests download karo
+                loadTests(); 
             } else {
-                // User Login NAHI hai -> Wapas bhejo
+                // User Login NAHI hai -> Login page par bhejo
                 window.location.href = "index.html";
             }
         });
@@ -121,19 +131,18 @@
             container.innerHTML = ""; 
 
             try {
-                // Database se 'tests' maango
                 const q = query(collection(db, "tests"), orderBy("createdAt", "desc"));
                 const snapshot = await getDocs(q);
 
                 if (snapshot.empty) {
-                    noMsg.classList.remove('hidden'); // Koi test nahi mila
+                    noMsg.classList.remove('hidden'); 
                 } else {
                     noMsg.classList.add('hidden');
                     snapshot.forEach(doc => {
                         const data = doc.data();
                         const id = doc.id;
                         
-                        // APKA DESIGN + REAL DATA
+                        // SAME DESIGN CARD
                         const card = `
                             <div class="test-card">
                                 <div class="flex justify-between items-center mb-2">
@@ -156,17 +165,14 @@
             } catch (err) {
                 console.error("Error:", err);
             } finally {
-                loader.style.display = 'none'; // Loader hatao
+                loader.style.display = 'none'; 
             }
         }
 
-        // 3. START TEST (Abhi sirf alert dega)
         window.startTest = (testId) => {
-            alert("Test ID: " + testId + "\n(Test Player hum agle step me banayenge!)");
-            // window.location.href = `test-player.html?id=${testId}`;
+            alert("Test ID: " + testId + "\n(Player coming soon!)");
         };
 
-        // 4. LOGOUT
         document.getElementById('logout-btn').addEventListener('click', () => {
             if(confirm("Are you sure you want to logout?")) {
                 signOut(auth).then(() => window.location.href = "index.html");
