--- a/index.html
+++ b/index.html
@@ -53,42 +53,33 @@
 
     <script type="module">
         import { auth, db } from "./config.js";
-        import { GoogleAuthProvider, signInWithRedirect, getRedirectResult, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { GoogleAuthProvider, signInWithRedirect, getRedirectResult, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { doc, setDoc, getDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // PWA (App Install)
+        // PWA Enable
         if ('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');
 
-        // 🔥 1. GOOGLE LOGIN BUTTON FUNCTION
-        window.loginWithGoogle = () => {
-            const provider = new GoogleAuthProvider();
-            // यह लाइन वापस जोड़ दी है ताकि हमेशा ईमेल की लिस्ट आए
-            provider.setCustomParameters({ prompt: 'select_account' });
-            signInWithRedirect(auth, provider);
-        };
-
-        // 🔥 2. LOGIN SUCCESS CHECKER
-        // यह कोड तभी चलेगा जब यूजर लॉगिन करके वापस आएगा
+        // 🔥 LOGIC: सिर्फ तभी लॉगिन करो जब बटन दबाया गया हो और गूगल से वापस आए हों
+        
         getRedirectResult(auth)
             .then(async (result) => {
                 if (result && result.user) {
+                    console.log("Login Success via Redirect");
+                    // यूजर को डेटाबेस में सेव करो
                     await saveUser(result.user);
+                    // अब डैशबोर्ड पर भेज दो
                     window.location.href = "dashboard.html";
                 }
             })
-            .catch((error) => console.log(error));
+            .catch((error) => {
+                console.error("Login Failed", error);
+                alert("Login Error: " + error.message);
+            });
 
-        // 🔥 3. OLD USER CHECK (Simple)
-        onAuthStateChanged(auth, async (user) => {
-            if (user) {
-                // अगर पहले से लॉगिन है तो डैशबोर्ड भेज दो
-                await saveUser(user);
-                window.location.href = "dashboard.html";
-            }
-            // अगर लॉगिन नहीं है, तो कुछ मत करो। लॉगिन स्क्रीन अपने आप दिखेगी।
-        });
+        // 💡 नोट: मैंने यहाँ से onAuthStateChanged हटा दिया है।
+        // अब यह कोड अपने आप डैशबोर्ड पर नहीं भेजेगा। हमेशा लॉगिन पेज दिखेगा।
 
-        // User Data Save
+        // User Save Helper
         async function saveUser(user) {
             const userRef = doc(db, "users", user.uid);
             await setDoc(userRef, {
@@ -99,7 +90,15 @@
             }, { merge: true });
         }
 
-        // Email Login
+        // 🚀 Google Button Action
+        window.loginWithGoogle = () => {
+            const provider = new GoogleAuthProvider();
+            // लिस्ट दिखाने वाला कोड
+            provider.setCustomParameters({ prompt: 'select_account' });
+            signInWithRedirect(auth, provider);
+        };
+
+        // 📧 Email Button Action
         window.loginEmail = async () => {
             const email = document.getElementById('email').value;
             const pass = document.getElementById('password').value;
