--- a/index.html
+++ b/index.html
@@ -109,3 +109,9 @@
     </script>
 </body>
 </html>
+
+<footer style="margin-top: 50px; padding: 20px; text-align: center; border-top: 1px solid #ddd;">
+    <p>© 2026 Janz Education | Founder: Mohammad Ayub Janz</p>
+    <a href="about.html" style="margin-right: 15px; text-decoration: none; color: #3498db;">हमारे बारे में (About Us)</a>
+    <a href="privacy.html" style="text-decoration: none; color: #3498db;">गोपनीयता नीति (Privacy Policy)</a>
+</footer>
