--- a/index.html
+++ b/index.html
@@ -108,10 +108,8 @@
         };
     </script>
 </body>
+   <div style="width: 100%; text-align: center; padding: 20px 0; margin-top: 20px; background: #fff;">
+    <a href="about.html" style="margin: 0 15px; color: #3498db; text-decoration: none; font-size: 14px; font-weight: bold;">हमारे बारे में (About Us)</a>
+    <a href="privacy.html" style="margin: 0 15px; color: #3498db; text-decoration: none; font-size: 14px; font-weight: bold;">गोपनीयता नीति (Privacy Policy)</a>
+   </div> 
 </html>
-
-<footer style="margin-top: 50px; padding: 20px; text-align: center; border-top: 1px solid #ddd;">
-    <p>© 2026 Janz Education | Founder: Mohammad Ayub Janz</p>
-    <a href="about.html" style="margin-right: 15px; text-decoration: none; color: #3498db;">हमारे बारे में (About Us)</a>
-    <a href="privacy.html" style="text-decoration: none; color: #3498db;">गोपनीयता नीति (Privacy Policy)</a>
-</footer>
