--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         };
     </script>
 </body>
-   <div style="width: 100%; text-align: center; padding: 20px 0; margin-top: 20px; background: #fff;">
+    <div style="clear: both; width: 100%; text-align: center; padding: 30px 0; margin-top: 50px; position: relative; bottom: 0;">
     <a href="about.html" style="margin: 0 15px; color: #3498db; text-decoration: none; font-size: 14px; font-weight: bold;">हमारे बारे में (About Us)</a>
     <a href="privacy.html" style="margin: 0 15px; color: #3498db; text-decoration: none; font-size: 14px; font-weight: bold;">गोपनीयता नीति (Privacy Policy)</a>
-   </div> 
+    </div>
 </html>
