--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
         };
     </script>
 </body>
-    <div style="clear: both; width: 100%; text-align: center; padding: 30px 0; margin-top: 50px; position: relative; bottom: 0;">
-    <a href="about.html" style="margin: 0 15px; color: #3498db; text-decoration: none; font-size: 14px; font-weight: bold;">हमारे बारे में (About Us)</a>
-    <a href="privacy.html" style="margin: 0 15px; color: #3498db; text-decoration: none; font-size: 14px; font-weight: bold;">गोपनीयता नीति (Privacy Policy)</a>
+    <div style="position: fixed; left: 0; bottom: 0; width: 100%; text-align: center; padding: 15px 0; background-color: #f1f1f1; z-index: 9999;">
+    <a href="about.html" style="margin: 0 15px; color: #333; text-decoration: none; font-size: 14px; font-weight: bold;">हमारे बारे में (About Us)</a>
+    <span style="color: #999;">|</span>
+    <a href="privacy.html" style="margin: 0 15px; color: #333; text-decoration: none; font-size: 14px; font-weight: bold;">गोपनीयता नीति (Privacy Policy)</a>
     </div>
 </html>
