--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             
             <button onclick="loginEmail()" class="w-full bg-blue-900 text-white py-4 rounded-2xl font-bold text-xs shadow-xl shadow-blue-100 hover:bg-black transition-all uppercase tracking-widest">Login to Dashboard</button>
         </div>
-
         <p class="mt-10 text-[9px] text-slate-400 font-medium">
-            By signing in, you agree to our <br>
-            <a href="#" class="text-blue-600 font-bold hover:underline">Privacy Policy</a> & <a href="#" class="text-blue-600 font-bold hover:underline">Terms of Service</a>
+  By signing in, you agree to our 
+  <a href="privacy.html" class="text-blue-600 font-bold hover:underline">Privacy Policy</a> & 
+  <a href="about.html" class="text-blue-600 font-bold hover:underline">Terms of Service</a>.
         </p>
     </div>
 
@@ -108,9 +108,4 @@
         };
     </script>
 </body>
-    <div style="position: fixed; left: 0; bottom: 0; width: 100%; text-align: center; padding: 15px 0; background-color: #f1f1f1; z-index: 9999;">
-    <a href="about.html" style="margin: 0 15px; color: #333; text-decoration: none; font-size: 14px; font-weight: bold;">हमारे बारे में (About Us)</a>
-    <span style="color: #999;">|</span>
-    <a href="privacy.html" style="margin: 0 15px; color: #333; text-decoration: none; font-size: 14px; font-weight: bold;">गोपनीयता नीति (Privacy Policy)</a>
-    </div>
 </html>
