--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
 
     <script type="module">
         import { auth, db } from "./config.js";
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+// ✅ यह कोड पुराने छात्रों को सीधा अंदर भेज देगा
+onAuthStateChanged(auth, (user) => {
+    if (user) {
+        // अगर छात्र पहले से लॉगिन है, तो उसे लॉगिन पेज मत दिखाओ
+        window.location.replace("dashboard.html");
+    }
+});
         // 🔥 ORIGINAL IMPORTS (POPUP VALA)
         import { GoogleAuthProvider, signInWithPopup, signInWithEmailAndPassword, browserPopupRedirectResolver } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { doc, setDoc, getDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
