--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janz Education | Login</title>
+    <title>Janz Education - Login | Lab Assistant Exam 2026</title>
+    <meta name="description" content="Janz Education पोर्टल पर लॉगिन करें। राजस्थान लैब असिस्टेंट और अन्य प्रतियोगी परीक्षाओं के लिए बेहतरीन ऑनलाइन टेस्ट सीरीज़ और स्टडी मटीरियल।">
+    <link rel="canonical" href="https://janzeducation.online/">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
